# content-based-image-retrieval-resnet

./: .gitignore  CMakeLists.txt  COMMIT1.md  cbir.cpp  compute_features.cpp  distances.cpp  distances.h  features.cpp  features.h
